# edgerender-rust

./: .gitignore  .prettierrc  Cargo.toml  README.md  index.js  package.json  webpack.config.js  wrangler.toml
src/: config.js  env.rs  index.js  lib.rs  macros.rs
src/rust/: config.rs  env.rs  lib.rs  router.rs
worker/: worker.js
