[package]
name = "edgerender"
version = "0.1.0"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["wee_alloc"]

[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tera = { version = "1.3.1", default-features = false}
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.40"
serde_yaml = "0.8.13"
regex = "1.3.9"
lazy_static = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
# have a small but notiable effect on size:
lto = true
codegen-units = 1

# see https://github.com/gonowa/wasm-opt for options
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
# useful when investigating wasm size with twiggy
#wasm-opt = false
